# nanoBabble

./: .gitignore  AGENTS.md  README.md  checkpoint.py  config.py  config.toml  data.py  experiments.py  metrics.py  model.py  pyproject.toml  simple_transformer.py  synth.py  tracking.py  train.parquet  train.py
configs/: config.toml  test.toml
