[project]
name = "nanobabble"
version = "0.1.0"
description = "JAX/NNX trainer scaffold with checkpointing, metrics, and experiment tracking."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.4",
    "jax>=0.7.1",
    "optax>=0.2.5",
    "orbax-checkpoint>=0.11.0",
    "polars>=1.30.0",
    "synth-data",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
synth-data = { path = "../synth_data", editable = true }
